fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 body {
   display:flex;
   flex-direction:column;
-  /* margin: 0; */
+  margin: auto;
   min-height: 100vh;
   font-size:1.6rem;
   width:100%;
